@@ -38,26 +38,27 @@ let run_command cmdline = ignore(command cmdline)
    between 70000 and 80000 for macOS).
 *)
 
-let build_diversion lst =
+let build_response_file lst =
   let (responsefile, oc) = Filename.open_temp_file "camlresp" "" in
   List.iter (fun f -> Printf.fprintf oc "%s\n" f) lst;
   close_out oc;
   at_exit (fun () -> Misc.remove_file responsefile);
   "@" ^ responsefile
 
-let quote_files lst =
+let quote_files ~response_files lst =
   let lst = List.filter (fun f -> f <> "") lst in
   let quoted = List.map Filename.quote lst in
   let s = String.concat " " quoted in
-  if String.length s >= 65536
-  || (String.length s >= 4096 && Sys.os_type = "Win32")
-  then build_diversion quoted
+  if response_files &&
+  (String.length s >= 65536
+  || (String.length s >= 4096 && Sys.os_type = "Win32"))
+  then build_response_file quoted
   else s
 
-let quote_prefixed pr lst =
+let quote_prefixed ~response_files pr lst =
   let lst = List.filter (fun f -> f <> "") lst in
   let lst = List.map (fun f -> pr ^ f) lst in
-  quote_files lst
+  quote_files ~response_files lst
 
 let quote_optfile = function
   | None -> ""
@@ -112,7 +113,7 @@ let compile_file ?output ?(opt="") ?stable_name name =
          opt
          (if !Clflags.debug && Config.ccomp_type <> "msvc" then "-g" else "")
          (String.concat " " (List.rev !Clflags.all_ccopts))
-         (quote_prefixed "-I"
+         (quote_prefixed ~response_files:true "-I"
             (List.map (Misc.expand_directory Config.standard_library)
                (List.rev !Clflags.include_dirs)))
          (Clflags.std_include_flag "-I")
@@ -137,11 +138,14 @@ let create_archive archive file_list =
     match Config.ccomp_type with
       "msvc" ->
         command(Printf.sprintf "link /lib /nologo /out:%s %s"
-                               quoted_archive (quote_files file_list))
+                               quoted_archive
+                               (quote_files ~response_files:true file_list))
     | _ ->
         assert(String.length Config.ar > 0);
         command(Printf.sprintf "%s rc %s %s"
-                Config.ar quoted_archive (quote_files file_list))
+                Config.ar quoted_archive
+                (quote_files ~response_files:Config.ar_supports_response_files
+                  file_list))
 
 let expand_libname cclibs =
   cclibs |> List.map (fun cclib ->
@@ -180,8 +184,9 @@ let call_linker mode output_name files extra =
         Printf.sprintf "%s%s %s %s %s"
           Config.native_pack_linker
           (Filename.quote output_name)
-          (quote_prefixed l_prefix (Load_path.get_paths ()))
-          (quote_files (remove_Wl files))
+          (quote_prefixed ~response_files:true
+            l_prefix (Load_path.get_paths ()))
+          (quote_files ~response_files:true (remove_Wl files))
           extra
       else
         Printf.sprintf "%s -o %s %s %s %s %s %s"
@@ -194,9 +199,9 @@ let call_linker mode output_name files extra =
           )
           (Filename.quote output_name)
           ""  (*(Clflags.std_include_flag "-I")*)
-          (quote_prefixed "-L" (Load_path.get_paths ()))
+          (quote_prefixed ~response_files:true "-L" (Load_path.get_paths ()))
           (String.concat " " (List.rev !Clflags.all_ccopts))
-          (quote_files files)
+          (quote_files ~response_files:true files)
           extra
     in
     command cmd
