@@ -68,3 +68,4 @@ let host = "zinc-boot-ocaml"
 let target = host
 let systhread_supported = false
 let flexdll_dirs = []
+let ar_supports_response_files = true
